cmake_minimum_required(VERSION 3.26)
project(untitled8)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled8 main.cpp
        user.cpp
        user.h
        library.cpp
        library.h
        book.cpp
        book.h
        item.cpp
        item.h
        library.cpp
        library.h
        HashTable.cpp
        HashTable.h
        HashNode.cpp
        HashNode.h
        main.cpp
        main.h
        book.cpp
        book.cpp
)
